tests/snapshots/local_discovery_snapshots__generic_workspace_local_discovery.snap
---
source: tests/local_discovery_snapshots.rs
expression: normalized
---
{
  "nodes": [
    {
      "type": "repo",
      "id": {
        "common_dir": "/fixture/repo-a/.git"
      },
      "common_dir": "/fixture/repo-a/.git",
      "source_paths": [
        "/fixture/repo-a"
      ]
    },
    {
      "type": "repo",
      "id": {
        "common_dir": "/fixture/repo-b/.git"
      },
      "common_dir": "/fixture/repo-b/.git",
      "source_paths": [
        "/fixture/repo-b"
      ]
    },
    {
      "type": "checkout",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "root": "/fixture/repo-a",
      "git_dir": "/fixture/repo-a/.git",
      "current_branch": {
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      }
    },
    {
      "type": "checkout",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "root": "/fixture/repo-b"
      },
      "root": "/fixture/repo-b",
      "git_dir": "/fixture/repo-b/.git",
      "current_branch": {
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "refname": "refs/heads/main"
      }
    },
    {
      "type": "workspace",
      "id": {
        "root": "/fixture"
      },
      "root": "/fixture",
      "name": "fixture"
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      },
      "refname": "refs/heads/main"
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "refname": "refs/heads/main"
      },
      "refname": "refs/heads/main"
    }
  ],
  "candidate_links": [
    {
      "id": "generic_workspace:workspace:/fixture:workspace_contains_repo:repo:/fixture/repo-a/.git",
      "source": {
        "type": "workspace",
        "root": "/fixture"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo-a/.git"
        }
      },
      "relation": "workspace_contains_repo",
      "provenance": "convention",
      "confidence": "medium",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "generic_workspace",
        "evidence": "multiple git repos under explicit scan root",
        "fields": {
          "canonical_checkout_root": "/fixture/repo-a",
          "logical_path": "/fixture/repo-a",
          "member_path_kind": "directory"
        },
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "generic_workspace:workspace:/fixture:workspace_contains_repo:repo:/fixture/repo-b/.git",
      "source": {
        "type": "workspace",
        "root": "/fixture"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo-b/.git"
        }
      },
      "relation": "workspace_contains_repo",
      "provenance": "convention",
      "confidence": "medium",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "generic_workspace",
        "evidence": "multiple git repos under explicit scan root",
        "fields": {
          "canonical_checkout_root": "/fixture/repo-b",
          "logical_path": "/fixture/repo-b",
          "member_path_kind": "directory"
        },
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:belongs_to_repo:repo:/fixture/repo-a/.git",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo-a/.git"
        }
      },
      "relation": "belongs_to_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "git common dir",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:checked_out_branch:branch:repo:/fixture/repo-a/.git@refs/heads/main",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/fixture/repo-a/.git"
          },
          "refname": "refs/heads/main"
        }
      },
      "relation": "checked_out_branch",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "symbolic HEAD",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo-b/.git@/fixture/repo-b:belongs_to_repo:repo:/fixture/repo-b/.git",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "root": "/fixture/repo-b"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo-b/.git"
        }
      },
      "relation": "belongs_to_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "git common dir",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo-b/.git@/fixture/repo-b:checked_out_branch:branch:repo:/fixture/repo-b/.git@refs/heads/main",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "root": "/fixture/repo-b"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/fixture/repo-b/.git"
          },
          "refname": "refs/heads/main"
        }
      },
      "relation": "checked_out_branch",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "symbolic HEAD",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    }
  ],
  "resolved_relationships": [
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo-a/.git"
      },
      "relation": "belongs_to_repo",
      "selected_link_id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:belongs_to_repo:repo:/fixture/repo-a/.git"
    },
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      },
      "relation": "checked_out_branch",
      "selected_link_id": "git:checkout:repo:/fixture/repo-a/.git@/fixture/repo-a:checked_out_branch:branch:repo:/fixture/repo-a/.git@refs/heads/main"
    },
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "root": "/fixture/repo-b"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo-b/.git"
      },
      "relation": "belongs_to_repo",
      "selected_link_id": "git:checkout:repo:/fixture/repo-b/.git@/fixture/repo-b:belongs_to_repo:repo:/fixture/repo-b/.git"
    },
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "root": "/fixture/repo-b"
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "refname": "refs/heads/main"
      },
      "relation": "checked_out_branch",
      "selected_link_id": "git:checkout:repo:/fixture/repo-b/.git@/fixture/repo-b:checked_out_branch:branch:repo:/fixture/repo-b/.git@refs/heads/main"
    },
    {
      "source": {
        "type": "workspace",
        "root": "/fixture"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo-a/.git"
      },
      "relation": "workspace_contains_repo",
      "selected_link_id": "generic_workspace:workspace:/fixture:workspace_contains_repo:repo:/fixture/repo-a/.git"
    },
    {
      "source": {
        "type": "workspace",
        "root": "/fixture"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo-b/.git"
      },
      "relation": "workspace_contains_repo",
      "selected_link_id": "generic_workspace:workspace:/fixture:workspace_contains_repo:repo:/fixture/repo-b/.git"
    }
  ],
  "diagnostics": [],
  "node_provenance": [
    {
      "node_id": {
        "type": "repo",
        "common_dir": "/fixture/repo-a/.git"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "repo",
        "common_dir": "/fixture/repo-b/.git"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "root": "/fixture/repo-a"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "root": "/fixture/repo-b"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "workspace",
        "root": "/fixture"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo-a/.git"
        },
        "refname": "refs/heads/main"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo-b/.git"
        },
        "refname": "refs/heads/main"
      },
      "provider": "generic_workspace",
      "freshness_epoch": "<redacted>"
    }
  ]
}
