tests/snapshots/local_discovery_snapshots__linked_worktree_local_discovery.snap
---
source: tests/local_discovery_snapshots.rs
expression: normalized
---
{
  "nodes": [
    {
      "type": "repo",
      "id": {
        "common_dir": "/fixture/repo/.git"
      },
      "common_dir": "/fixture/repo/.git",
      "source_paths": [
        "/fixture/repo-linked"
      ]
    },
    {
      "type": "checkout",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo-linked"
      },
      "root": "/fixture/repo-linked",
      "git_dir": "/fixture/repo/.git/worktrees/repo-linked",
      "current_branch": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/linked"
      }
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/linked"
      },
      "refname": "refs/heads/linked"
    },
    {
      "type": "branch",
      "id": {
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "refname": "refs/heads/main"
    }
  ],
  "candidate_links": [
    {
      "id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo-linked:belongs_to_repo:repo:/fixture/repo/.git",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo-linked"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "repo",
          "common_dir": "/fixture/repo/.git"
        }
      },
      "relation": "belongs_to_repo",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "git common dir",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    },
    {
      "id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo-linked:checked_out_branch:branch:repo:/fixture/repo/.git@refs/heads/linked",
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo-linked"
      },
      "target": {
        "kind": "node",
        "id": {
          "type": "branch",
          "repo": {
            "common_dir": "/fixture/repo/.git"
          },
          "refname": "refs/heads/linked"
        }
      },
      "relation": "checked_out_branch",
      "provenance": "strong_discovered",
      "confidence": "high",
      "freshness": "fresh",
      "source_metadata": {
        "adapter": "git",
        "evidence": "symbolic HEAD",
        "freshness_epoch": "<redacted>"
      },
      "state": {
        "state": "active"
      }
    }
  ],
  "resolved_relationships": [
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo-linked"
      },
      "target": {
        "type": "repo",
        "common_dir": "/fixture/repo/.git"
      },
      "relation": "belongs_to_repo",
      "selected_link_id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo-linked:belongs_to_repo:repo:/fixture/repo/.git"
    },
    {
      "source": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo-linked"
      },
      "target": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/linked"
      },
      "relation": "checked_out_branch",
      "selected_link_id": "git:checkout:repo:/fixture/repo/.git@/fixture/repo-linked:checked_out_branch:branch:repo:/fixture/repo/.git@refs/heads/linked"
    }
  ],
  "diagnostics": [],
  "node_provenance": [
    {
      "node_id": {
        "type": "repo",
        "common_dir": "/fixture/repo/.git"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "checkout",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "root": "/fixture/repo-linked"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/linked"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    },
    {
      "node_id": {
        "type": "branch",
        "repo": {
          "common_dir": "/fixture/repo/.git"
        },
        "refname": "refs/heads/main"
      },
      "provider": "git",
      "freshness_epoch": "<redacted>"
    }
  ]
}
